fix sun overflowing on small screen (#261)
* fix sun overflowing on small screen

* test for fixing safari issue

* test

* revert changes and only remove things that cause the safari error

* remove all 100VW, because they cause issues in safari

* fix resize issue

* remove 100VW from about page

---------

--- a/src/app/public/components/about/about.component.css
+++ b/src/app/public/components/about/about.component.css
@@ -130,11 +130,6 @@ h1 {
 	}
 }
 
-.full-width {
-	margin-left: -16px;
-	margin-right: -16px;
-}
-
 .fund-style {
 	display: flex;
 	justify-content: space-between;
@@ -517,20 +512,5 @@ h1 {
 		.heading-sec {
 			width: 85%;
 		}
-	}
-}
-
-/* To force full width in some sections */
-@media (min-width: 768px) {
-	.full-width {
-		margin-left: -24px;
-		margin-right: -24px;
-	}
-}
-/* To force full width in some sections */
-@media (min-width: 1224px) {
-	.full-width {
-		margin-left: calc(-100vw / 2 + (50% + 600px) / 2);
-		margin-right: calc(-100vw / 2 + (50% + 600px) / 2);
 	}
 }
